react_intro/task_0/dashboard/src/App.css
.App-header {
  display: flex;
  align-items: center;
}

.App-header img {
  width: auto;
  height: 14rem;
}

.App-header h1 {
  color: #e0454B;
}

.App-body {
  padding: 2rem;
  height: 25rem;
  border-top: 2px solid #e0454B;
  border-bottom: 2px solid #e0454B;
}

.App-footer {
  text-align: center;
  font-style: italic;
}

